Fix css to be less crap on mobile (still bad though sorry...)

--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
+html {
+    height: 100%;
+}
+
 body {
     margin: 0;
+    height: 100%;
 }
 
 .outer-container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100%;
+    height: auto;
 }
 
 header {
@@ -51,7 +57,7 @@ header .title-card p {
 header #contact-me-btn {
     margin: 16px;
     border-radius: 48px;
-    width: 150px;
+    max-width: 150px;
     border: 1px solid black;
     /*box-shadow: 4px 4px 4px lightslategrey;*/
     font-size: 24px;
@@ -76,10 +82,16 @@ header #contact-me-btn:hover {
     background-color: whitesmoke;
 }
 
-.main-content .left-menu {
+@media only screen and (min-width: 600px) {
+   .main-content .left-menu, .main-content .right-menu {
     flex: 2 1 0;
     text-decoration: none;
-}
+}}
+
+@media only screen and (max-width: 600px) {
+    .main-content .left-menu, .main-content .right-menu {
+    display: none;
+}}
 
 .main-content .left-menu a, .main-content .right-menu a {
     text-decoration: none;
@@ -153,6 +165,7 @@ header #contact-me-btn:hover {
     display: flex;
     flex-direction: column;
     font-size: 18px;
+    align-items: stretch;
 }
 
 .main-content .center-content a {
@@ -162,12 +175,17 @@ header #contact-me-btn:hover {
 
 .main-content .center-content p {
     text-align: left;
+    margin: 8px;
+}
+
+.main-content .center-content h1 {
+    margin: 8px;
 }
 
 .main-content .center-content .trip-report {
     display: flex;
     font-size: 18px;
-    align-items: center;
+    align-items: stretch;
     justify-content: flex-start;
 }
 
@@ -182,32 +200,32 @@ header #contact-me-btn:hover {
     font-style: italic;
 }
 
+.main-content .center-content .trip-report figure {
+    flex: 1;
+    margin: max(16px, 1%);
+    height: 100%;
+    align-self: center;
+}
+
 .main-content .trip-report img {
-    height: 150px;
+    max-width: 100%;
+    margin: 0;
 }
 
 .main-content .summary {
+    flex: 3;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
-.main-content figure {
-    float: left;
-}
 
 .trip-figure {
     border-radius: 4rem;
     display: flex;
     flex-direction: column;
-    width: 60rem;
-    max-width: 75vw;
     margin: 3rem;
     align-self: center;
-}
-
-img {
-    display: block;
-    margin: 2rem;
 }
 
 figcaption {
@@ -215,8 +233,8 @@ figcaption {
     font-style: italic;
 }
 
-.main-content .right-menu {
-    flex: 2 1 0;
+img {
+    width: 100%;
 }
 
 .main-content .right-menu .right-box {
